--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "1.2.16",
     "ng-file-upload": "~1.6.12",
     "ng-file-upload-shim": "~1.6.12",
-    "angular-bootstrap": "~0.11.2"
+    "angular-bootstrap": "~0.11.2",
+    "angular-loading-bar": "~0.6.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
